Fix #5 - Make tagline visible in header

--- a/style.css
+++ b/style.css
@@ -163,10 +163,9 @@ img {
 }
 
 .site-description {
-	margin: 0;
+	margin: 0.25rem 0 0 0;
 	font-size: var(--font-size-base);
 	color: var(--color-text-light);
-	display: none;
 }
 
 /* ===================================
